# WritingAssistance

./: LICENSE  README.md  pyproject.toml  task.md
notebooks/: results.ipynb
scripts/: detect_formality.py  run_evaluation_pipeline.py
src/writing_assistance/: __init__.py  formality_detector.py
src/writing_assistance/models/: __init__.py  deberta.py  gpt_detector.py  xlm_roberta.py
src/writing_assistance/utils/: evaluate_model.py  gpt_components.py  normalize_data.py
src/writing_assistance_core/: __init__.py  formality_detector.py
